--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
-    margin: 0;
     padding: 0;
-    width: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
 /*グローバルナビゲーションバー*/
@@ -19,7 +19,7 @@ header{
     height: 100%;
 }
 
-.nav-ul{
+.nav ul{
     display: flex;
     padding: 0;
     margin: 0;
@@ -83,7 +83,7 @@ opacity: 1;
 }
 
 /*リンクの設定*/
-li a{
+a{
     text-decoration: none;/*リンクの下線をなくす*/
     color: black;/*liタグの文字色を黒に*/
     height: 100%;
@@ -176,7 +176,7 @@ h3{
 .menu {
     position: fixed;
     left: -250%; /* 画面左側に完全に隠す */
-    width: 200px;
+    width: 160px;
     height: 100vh; /* 画面の残りいっぱい */
     transition: left 0.4s ease; /* スライドアニメーション */
     z-index: 99;
@@ -230,25 +230,107 @@ h3{
 }
 
 .menu-btn {
+    right: 10px;
     background-color: rgb(98, 126, 197);
     color: rgb(253, 253, 253);
     border: none; 
     margin-top: 3px;
     border-radius: 2px;
     height: 25px;
-    margin-left: 3px;
-    /*ボタンのデフォルト装飾を削除*/
-    box-shadow: none; 
+    margin-left: 110px;
+    box-shadow: none;
+    box-sizing: border-box;
+    text-align: center;
 }
 
 .footer{
     background-color: rgb(197, 197, 197);
-    position:absolute;
+    position:static;
     bottom: 0;
     width: 100%;
     height: 100px;
     margin:0;
     padding:0;
+}
+
+/*登録関係*/
+.input label{
+    font-weight: bold;
+}
+
+/* 2. 見出しと入力欄のスタイル */
+.center-content h2{
+    text-align: left; 
+    margin: 10px 0; 
+}
+
+.form-container{
+    width:100%;
+    max-width: 600px;
+    margin:0 auto; /* フォーム全体を中央揃え */
+    padding: 20px;
+}
+
+.customer-text{
+    width:90%;
+    padding: 8px;
+    height: 30px;
+    border-radius: 3px;
+    border: solid 1px rgb(132, 132, 132);
+    
+}
+
+.min-text{
+    text-align:center;
+    width: 80px;
+    padding: 8px;
+    border-radius: 3px;
+    border: solid 1px rgb(132, 132, 132);
+}
+
+/*ボタンの設定*/
+.btn-base{
+    border: none;
+    color: white;
+    width: 150px;
+    height: 40px;
+    border-radius: 5px;
+    font-size: 15px;
+    cursor: pointer;
+    box-shadow: none;
+}
+
+.button-group{
+    display: flex;
+    justify-content: center;
+    gap: 20px;/*ボタン間の隙間*/
+    margin-top: 30px;
+    padding-bottom: 20px;
+}
+
+.button-group a{
+    display: flex;
+    align-items: center;
+}
+
+.btn-wrapper{
+    display: inline-block;
+}
+
+.btn-center{
+    text-align: center;
+}
+
+.greenBtn{
+    background-color: rgb(85, 187, 148);
+}
+
+.blueBtn{
+    background-color: rgb(80, 107, 163);
+}
+
+.redBtn{
+    background-color: rgb(226, 95, 95);
 }
 
 /*画面サイズが800pxの設定*/
@@ -288,11 +370,15 @@ h3{
     }
 
     .menu li{
-        font-size:small;
+        font-size:14px;
     }
 
     .menu-button {
     top: 40px;
+    }
+
+    .menu-btn{
+        margin-left: 75px;
     }
 }
 
@@ -311,7 +397,7 @@ h3{
     }
 
     .navImage{
-        margin-top: 2px;
+        margin-top: 5px;
     }
     
     .searchIcon{
@@ -328,15 +414,19 @@ h3{
 
     .menu{
         top:35px;
-        width: 100px;
+        width: 110px;
         
     }
 
     .menu li{
-        font-size:11px;
+        font-size:13px;
     }
 
     .menu-button {
     top: 35px;
+    }
+
+    .menu-btn{
+        margin-left: 67px;
     }
 }
