--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ h3{
     height: 100vh; /* 画面の残りいっぱい */
     transition: left 0.4s ease; /* スライドアニメーション */
     z-index: 99;
-    background-color: rgb(245, 245, 245);/* メニューバー背景色*/
+    background-color: rgb(249, 249, 249);/* メニューバー背景色*/
     top: 60px;/* ナビゲーションバーの高さからスタート */
     padding:0;
     margin:0;
@@ -247,8 +247,8 @@ h3{
     padding: 0;
     margin: 0;
     list-style: none;
-    margin-top:5px;
     margin-bottom: 5px;
+    width: 100%;
 }
 
 .menu-ul li{
