--- a/css/cart.css
+++ b/css/cart.css
@@ -1,8 +1,5 @@
-
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
-  padding: 24px 20px 80px;
   background: #fff;
   color: #000;
 }
@@ -11,7 +8,7 @@ body {
 h1 {
   font-weight: normal;
   font-size: 22px;
-  margin-bottom: 24px;
+  margin-bottom: 14px;
 }
 
 /* カートリスト */
@@ -97,7 +94,7 @@ h1 {
   margin-top: 48px;
 }
 
-button {
+.button {
   width: 140px;
   height: 56px;
   font-size: 20px;
