--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -1,5 +1,7 @@
 body{
     background-color: rgb(240, 240, 240);
+    min-height: 100%;
+    height: 100vh;
 }
 
 .conteiner-header{
@@ -8,6 +10,10 @@ body{
     border: 1px solid black;
     top: 70px;
     margin-left: 200px;
+    display: flex;
+}
+.conteiner-header h2{
+    margin-right: 30px;
 }
 
 .admin-main {
@@ -34,6 +40,7 @@ body{
     line-height: 50px;
 }
 
+
 select{
     border:none;
     background-color: rgb(163, 192, 240);
@@ -49,7 +56,6 @@ select{
     padding: 20px;
 }
 
-.input,
 /* 各入力行のコンテナ */
 .input-row {
     display: flex;
@@ -116,16 +122,17 @@ textarea{
 .hidden-input{
     position: absolute;
     opacity: 0; 
-    width: 25%; 
+    width: 300px; 
     height: 80px;
     z-index: 10;
+    margin-left: 22%;
     
     /* マウスカーソルをポインターに維持（確認用） */
     cursor: pointer;
 }
 
 .custom-file-drop-area {
-    width: 40%; 
+    width: 300px; 
     height: 80px;
     border: 1px solid;
     background-color: #fff;
@@ -140,7 +147,7 @@ textarea{
 }
 
 .label-file{
-    margin-left: 30%;
+    margin-left: 32%;
     margin-bottom: 10px;
     margin-top: 0;
 }
