--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -4,6 +4,10 @@ body{
     height: 100vh;
 }
 
+main{
+    min-height: 100%;
+}
+
 .conteiner-header{
     width: 95%;
     background-color: white;
@@ -21,6 +25,7 @@ body{
     flex-grow: 1;
     padding: 30px;
     margin-top: 5px;
+    font-size: 20px;
 }
 
 .admin-nav{
@@ -40,6 +45,9 @@ body{
     line-height: 50px;
 }
 
+.empty{
+    height: 300px;
+}
 
 select{
     border:none;
@@ -54,6 +62,7 @@ select{
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     padding: 20px;
+    margin-bottom: 10px;
 }
 
 /* 各入力行のコンテナ */
@@ -75,11 +84,10 @@ select{
 }
 
 .input-label { 
-    width: 120px; 
+    width: 160px; 
     min-width: 120px; 
     padding-right: 15px;
     padding-top: 5px;
-    font-weight: bold;
     flex-shrink: 0;
     margin-right: 20%;
 }
@@ -96,6 +104,7 @@ select{
 .input-field-area input[type="text"],
 .input-field-area textarea,
 .input-field-area input[type="number"],
+.input-field-area input[type="email"],
 .input-field-area .input-field-small,
 textarea{
     width: 100%;
@@ -147,7 +156,7 @@ textarea{
 }
 
 .label-file{
-    margin-left: 32%;
+    margin-left: 40%;
     margin-bottom: 10px;
     margin-top: 0;
 }
@@ -155,6 +164,10 @@ textarea{
 p{
     display: flex;
     align-items: center;
+}
+
+.button-row{
+    text-align: right;
 }
 
 @media screen and (max-width: 900px) {
