--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ main{
     margin-left: 170px; /* サイドバーの幅分オフセット */
 }
 
+#menu-toggle.is-active ~ .footer {
+    margin-left: 170px; /* サイドバーの幅分オフセット */
+}
+
 /*グローバルナビゲーションバー*/
 header{
     margin: 0; 
@@ -464,6 +468,12 @@ h3{
     color: #5db8e9
 }
 
+.blue{
+    background-color: #c1e9ff;
+    padding: 3px;
+    width: 100%;
+}
+
 .black{
     color: black;
 }
@@ -504,6 +514,7 @@ h3{
 .center{
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .login-btn{
@@ -570,12 +581,16 @@ h3{
     margin-bottom: 10px;
 }
 
+.border{
+    border: solid 1px #000;
+}
+
 /* 各入力行のコンテナ */
 .input-row {
     display: flex;
     align-items: flex-start; 
-    margin-bottom: 10px;
-    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-top: 25px;
 }
 
 /* 左側のラベル部分（商品名、商品画像など） */
