--- a/css/style.css
+++ b/css/style.css
@@ -839,13 +839,15 @@ p{
 
 /*商品表示*/
 .card{
-    width: 120px;
-    height: 200px;
+    width: 160px;
+    height: 300px;
     border: #555 solid 1px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 .card img{
-    width: 118px;
+    width: 155px;
+    height: 170px;
+    margin:0 auto;
 }
 
 /*画面サイズが750pxの設定*/
