--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -25,6 +25,7 @@ body {
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 .container-admin {
+     margin-top: 80px;
     width: 90%;
     max-width: 1000px;
     margin: 20px auto;
